# mypy-type-check-test

./: .gitignore  Makefile  README.md  pyproject.toml
src/: config.py  main.py
