[tool.mypy]
strict = true

# Extra flags
warn_unreachable = true
allow_redefinition = true

enable_error_code = [
  "redundant-expr",
  "truthy-bool",
  "ignore-without-code",
  "unused-awaitable",
]

# Error Formatting
show_column_numbers = true
show_error_context = true
show_error_codes = true
show_traceback = true
pretty = true
color_output = true
error_summary = true

[tool.pyright]
ignore = [
  "**/__pycache__",
  "**/tests",
]
pythonVersion = "3.9"
reportMissingImports = true
reportMissingTypeStubs = true

[tool.poetry]
name = "mypy-type-check-test"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pyright = "^1.1.293"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
